--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                </div>
             </div>
          </div>
-         <div class="nav">
+<!--          <div class="nav">
             <div class="nav__background"></div> 
                <span class="nav__icon"></span>
                <div class="nav__box">
@@ -498,7 +498,7 @@
                      <li><a href="">enroll form</a> </li>
                   </ul>
                </div>
-          </div>
+          </div> -->
       </div>
       <script src="./style/main.js"></script>
    </body>
