--- a/index.html
+++ b/index.html
@@ -487,17 +487,20 @@
             </div>
          </div>
          <div class="nav">
-            <div class="nav__background"></div> 
-               <span class="nav__icon"></span>
-               <div class="nav__box">
+            <input type="checkbox" id="nav__checkbox"> 
+            <label for="nav__checkbox" class="nav__btn">
+               <span class="nav__btn--icon" ></span>
+            </label>
+            <div class="nav__background"></div>
+            <div class="nav__box">
                   <ul class="nav__box--list">
                      <li><a href="">about us</a></li>
-                     <li><a href="">our skill</a> </li>
-                     <li><a href="">our course</a> </li>
+                     <li><a href="">our skills</a> </li>
+                     <li><a href="">our courses</a> </li>
                      <li><a href="">testimonials</a></li>
                      <li><a href="">enroll form</a> </li>
                   </ul>
-               </div>
+            </div>
           </div>
       </div>
       <script src="./style/main.js"></script>
