--- a/index.html
+++ b/index.html
@@ -486,7 +486,6 @@
                </div>
             </div>
          </div>
-<<<<<<< HEAD
          <div class="nav">
             <input type="checkbox" id="nav__checkbox"> 
             <label for="nav__checkbox" class="nav__btn">
@@ -494,12 +493,10 @@
             </label>
             <div class="nav__background"></div>
             <div class="nav__box">
-=======
-<!--          <div class="nav">
+         <div class="nav">
             <div class="nav__background"></div> 
                <span class="nav__icon"></span>
                <div class="nav__box">
->>>>>>> 44053976a77e22d3f721b22e3f8ff9b85beedc65
                   <ul class="nav__box--list">
                      <li><a href="">about us</a></li>
                      <li><a href="">our skills</a> </li>
@@ -507,13 +504,10 @@
                      <li><a href="">testimonials</a></li>
                      <li><a href="">enroll form</a> </li>
                   </ul>
-<<<<<<< HEAD
             </div>
           </div>
-=======
                </div>
-          </div> -->
->>>>>>> 44053976a77e22d3f721b22e3f8ff9b85beedc65
+          </div>
       </div>
       <script src="./style/main.js"></script>
    </body>
