--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Document</title>
+      <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+      <title>LandingPage</title>
       <link
          rel="stylesheet"
          href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
@@ -43,7 +44,7 @@
                   >
                </div>
             </div>
-            <div class="section-about">
+            <div class="section-about" id="about">
                <div class="u-background-margin">
                   <div class="u-center-text">
                      <h2
@@ -109,7 +110,7 @@
             </div>
          </header>
          <section>
-            <div class="section-skill">
+            <div class="section-skill" id="skills">
                <div class="row">
                   <div class="col l-o-2 l-2 section-skill__box">
                      <p class="section-skill__box--icon">
@@ -154,7 +155,7 @@
                   </div>
                </div>
             </div>
-            <div class="u-background-margin section-courses">
+            <div class="u-background-margin section-courses" id="courses">
                <div class="u-center-text">
                   <h2
                      class="
@@ -304,7 +305,7 @@
                   </a>
                </div>
             </div>
-            <div class="u-center-text section-testimonials">
+            <div class="u-center-text section-testimonials" id="testimonials">
                <div class="section-testimonials__bg-video">
                   <video
                      src="./img/Boulevard.mp4"
@@ -373,7 +374,7 @@
                   >read all the testimonials &rarr;</a
                >
             </div>
-            <div class="section-erollnow">
+            <div class="section-erollnow" id="enroll-now">
                <div class="section-erollnow__box">
                         <form action="" class="form">
                            <h3
@@ -486,7 +487,6 @@
                </div>
             </div>
          </div>
-<<<<<<< HEAD
          <div class="nav">
             <input type="checkbox" id="nav__checkbox"> 
             <label for="nav__checkbox" class="nav__btn">
@@ -494,26 +494,15 @@
             </label>
             <div class="nav__background"></div>
             <div class="nav__box">
-=======
-<!--          <div class="nav">
-            <div class="nav__background"></div> 
-               <span class="nav__icon"></span>
-               <div class="nav__box">
->>>>>>> 44053976a77e22d3f721b22e3f8ff9b85beedc65
                   <ul class="nav__box--list">
-                     <li><a href="">about us</a></li>
-                     <li><a href="">our skills</a> </li>
-                     <li><a href="">our courses</a> </li>
-                     <li><a href="">testimonials</a></li>
-                     <li><a href="">enroll form</a> </li>
+                     <li><a href="#about">about us</a></li>
+                     <li><a href="#skills">our skills</a> </li>
+                     <li><a href="#courses">our courses</a> </li>
+                     <li><a href="#testimonials">testimonials</a></li>
+                     <li><a href="#enroll-now">enroll form</a> </li>
                   </ul>
-<<<<<<< HEAD
             </div>
           </div>
-=======
-               </div>
-          </div> -->
->>>>>>> 44053976a77e22d3f721b22e3f8ff9b85beedc65
       </div>
       <script src="./style/main.js"></script>
    </body>
